<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/top_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            style="@style/ImageButtonGeneral"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/btn_back"
            android:layout_marginStart="16dp"/>

        <TextView
            style="@style/TextContent.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/TextContent.Bold"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/nama"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/et_name"
        android:fontFamily="@font/gordita_regular"
        android:background="@drawable/custom_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:maxLines="1"
        android:textColor="@color/black"
        tools:text="@string/nama"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView
        android:id="@+id/textView1"
        style="@style/TextContent.Bold"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_email"
        android:fontFamily="@font/gordita_regular"
        android:background="@drawable/custom_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:maxLines="1"
        android:textColor="@color/black"
        tools:text="@string/email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"/>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextContent.Bold"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_password"
        android:fontFamily="@font/gordita_regular"
        android:background="@drawable/custom_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:maxLines="1"
        tools:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_register"
        style="@style/TextContent"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:backgroundTint="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/text_masuk"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_masuk"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <TextView
        android:id="@+id/btn_masuk"
        style="@style/TextContent.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        android:textColor="@color/secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>