<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/top_container"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            style="@style/ImageButtonGeneral"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/btn_back"
            android:layout_marginStart="16dp"/>

        <TextView
            style="@style/TextContent.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/lapor"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/TextContent.Bold"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/attachment"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tv_attachment"
        android:fontFamily="@font/gordita_regular"
        android:background="@drawable/custom_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textColor="@color/black"
        tools:text="@string/attachment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </TextView>

    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_camera_button"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_attachment"
        app:layout_constraintEnd_toEndOf="@+id/tv_attachment"
        app:layout_constraintTop_toTopOf="@+id/tv_attachment" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextContent.Bold"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/alamat"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attachment" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextContent.Bold"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="112dp"
        android:text="@string/kondisi_kerusakan"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attachment" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextContent.Bold"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="212dp"
        android:text="@string/deskripsi"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attachment" />

    <EditText
        android:id="@+id/et_alamat"
        android:fontFamily="@font/gordita_regular"
        android:background="@drawable/custom_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:maxLines="1"
        tools:text="@string/alamat"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/et_kondisi_kerusakan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/gordita_regular"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/kondisi_kerusakan" />

    <EditText
        android:id="@+id/et_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/gordita_regular"
        android:gravity="top|left"
        android:inputType="text|textMultiLine"
        android:lines="7"
        android:padding="16dp"
        android:scrollbarStyle="insideInset"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/deskripsi" />

    <Button
        android:id="@+id/btn_lapor"
        style="@style/TextContent"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/lapor"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_alamat" />

</androidx.constraintlayout.widget.ConstraintLayout>